# uc-intg-govee

./: Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
tools/: govee_discovery.py
uc_intg_govee/: __init__.py  client.py  config.py  driver.py  remote.py  setup.py
